--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise-2</title>
     <link rel="stylesheet" href="style.css">
-</head>.
+</head>
 <body>
 
     <h1>Universitas Muhammadiyah Yogyakarta</h1>
