menambahkan survey.html untuk page ke 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         Browser Anda tidak mendukung elemen video.
     </video>
 
-    <img src="file/Image.jpg" alt="Gambar" width="600" id="image">.
+    <img src="file/Image.jpg" alt="Gambar" width="600" id="image">
 
     <p class="description">
         UMY merupakan lembaga pendidikan tinggi yang didirikan oleh Persyarikatan Muhammadiyah, bertujuan untuk terwujudnya sarjana muslim berakhlak mulia, yaitu cendekiawan yang siap mengemban misi selaku khalifah Allah di atas bumi, yang tugas utamanya mengupayakan terwujudnya kehidupan masyarakat yang makmur sejahtera.
